@@ -1,9 +1,13 @@
 package com.solux.greenish.Post.Service;
 
+import com.solux.greenish.Photo.Domain.Photo;
+import com.solux.greenish.Photo.Dto.PhotoResponseDto;
+import com.solux.greenish.Photo.Repository.PhotoRepository;
+import com.solux.greenish.Photo.Service.PhotoService;
 import com.solux.greenish.Plant.Domain.Plant;
 import com.solux.greenish.Post.Domain.Post;
+import com.solux.greenish.Post.Dto.*;
 import com.solux.greenish.User.Domain.User;
-import com.solux.greenish.Post.Dto.PostDto.*;
 import com.solux.greenish.Plant.Repository.PlantRepository;
 import com.solux.greenish.Post.Repository.PostRepository;
 import com.solux.greenish.User.Repository.UserRepository;
@@ -12,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +23,8 @@ public class PostService {
     private final PostRepository postRepository;
     private final UserRepository userRepository;
     private final PlantRepository plantRepository;
+    private final PhotoService photoService;
+    private final PhotoRepository photoRepository;
 
     private User findUserById(Long userId) {
         return userRepository.findById(userId)
@@ -31,56 +36,79 @@ public class PostService {
                 .orElseThrow(() -> new IllegalArgumentException("해당 ID의 식물을 찾을 수 없습니다. ID: " + plantId));
     }
 
+    private Post findPostById(Long postId) {
+        return postRepository.findById(postId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 포스트를 찾을 수 없습니다. "));
+    }
+    private Photo findPhotoById(Long photoId) {
+        return photoRepository.findById(photoId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 사진을 조회할 수 없습니다."));
+    }
+
     // 조회
     // post id로 게시물 상세조회
     @Transactional(readOnly = true)
-    public PostDetailDto getPostDetailById(Long id) {
-        return postRepository.findById(id)
-                .map(PostDetailDto::new)
-                .orElseThrow(()->new IllegalArgumentException("해당 게시물이 존재하지 않습니다. "));
+    public PostDetailResponseDto getPostDetailById(Long id) {
+        Post post = findPostById(id);
+        PhotoResponseDto photo = photoService.getFilePath(post.getPhoto().getId());
+
+        return PostDetailResponseDto.of(post, photo);
     }
 
     // user의 id로 게시물 전체 조회
     @Transactional(readOnly = true)
-    public List<PostSimpleDto> getAllPostByUserId(Long userId) {
-        return postRepository.findAllByUserId(userId).stream()
-                .map(PostSimpleDto::of).collect(Collectors.toList());
+    public List<PostSimpleResponseDto> getAllPostByUserId(Long userId) {
+        List<Post> posts = postRepository.findAllByUserId(userId);
+        return posts.stream().map((post) -> PostSimpleResponseDto.of(post, photoService.getFilePath(post.getPhoto().getId()))).toList();
     }
 
     // plant id 로 게시물 전체 조회
     @Transactional(readOnly = true)
-    public List<PostSimpleDto> getAllPostByPlantId(Long plantId) {
-        return postRepository.findAllByPlantId(plantId).stream()
-                .map(PostSimpleDto::of).collect(Collectors.toList());
+    public List<PostSimpleResponseDto> getAllPostByPlantId(Long plantId) {
+        List<Post> posts = postRepository.findAllByPlantId(plantId);
+        return posts.stream().map((post) -> PostSimpleResponseDto.of(post, photoService.getFilePath(post.getPhoto().getId()))).toList();
     }
 
     // 게시물 전체 조회
     @Transactional(readOnly = true)
-    public List<PostSimpleDto> getAllPost() {
+    public List<PostSimpleResponseDto> getAllPost() {
         List<Post> posts = postRepository.findAll();
         return posts.stream()
-                .map(PostSimpleDto::of)
-                .collect(Collectors.toList());
+                .map((post) -> PostSimpleResponseDto.of(post, photoService.getFilePath(post.getPhoto().getId()))).toList();
     }
 
     // 게시물 등록
     @Transactional
-    public IdResponse postCreate(PostCreateDto postDto) {
-        User user = findUserById(postDto.getUserId());
-        Plant plant = findPlantById(postDto.getPlantId());
-        Post post = postDto.toEntity(user, plant);
+    public PostResponseDto postCreate(PostCreateRequestDto request) {
+        User user = findUserById(request.getUserId());
+        Plant plant = findPlantById(request.getPlantId());
+        Post post = request.toEntity(user, plant);
         postRepository.save(post);
-        return IdResponse.of(post);
+
+        PhotoResponseDto photo = null;
+        if (request.getFilename() != null) {
+            photo = photoService.generatePreSignedDto(post.getId(), request.getFilename());
+            post.updatePhoto(findPhotoById(photo.getPhotoId()));
+        }
+
+        return PostResponseDto.toDto(post, photo);
     }
 
     // 게시물 수정
     @Transactional
-    public IdResponse postModify(Long id, PostModifyDto request) {
-        Post post = postRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 게시물이 존재하지 않습니다. "));
-        Plant plant = plantRepository.findById(request.getPlantId()).get();
-        post.update(plant, request.getTitle(), request.getContent(), request.getPhoto_path());
-        return IdResponse.of(post);
+    public PostResponseDto postModify(PostModifyRequestDto request) {
+        Post post = findPostById(request.getPostId());
+        Plant plant = findPlantById(request.getPlantId());
+        post.update(plant, request.getTitle(), request.getContent());
+        String newFileName = request.getFileName();
+        String currentFileName = post.getPhoto().getFileName();
+
+        PhotoResponseDto photo = null;
+        if (newFileName != null && newFileName.equals(currentFileName)) {
+            photo = photoService.generatePreSignedDto(post.getId(), request.getFileName());
+            post.updatePhoto(findPhotoById(photo.getPhotoId()));
+        }
+        return PostResponseDto.toDto(post, photo);
     }
 
 
@@ -89,6 +117,9 @@ public class PostService {
     public void deletePost(Long id) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 게시물을 찾을 수 없습니다. "));
+        if (post.getPhoto() != null) {
+            photoService.deletePhoto(post.getPhoto().getId());
+        }
         postRepository.delete(post);
     }
 
